# multimedia_old

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
audio/: AudioUnitPlayer.cpp  DemuxDecode.cpp  TimeStretchEffect.cpp  WavFormat.cpp
base/memory/: AlignedMemory.cpp  AlignedMemory.h
base/time/: Time.cpp  Time.h
base/utils/: Bits.h
common/: AudioProperties.cpp  AudioProperties.h  FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  Utilities.cpp  Utilities.h
docs/: 音乐基础.txt
examples/: md5_example.cpp
media/base/: AudioBus.cpp  AudioBus.h  AudioSampleTypes.h  Constants.h  Limits.h
media/ffmpeg/: FFmpegCommon.cpp  FFmpegCommon.h  ffmpeg_common.cc  ffmpeg_common.h  ffmpeg_deleters.cc  ffmpeg_deleters.h
media/filters/: AudioFileReader.cpp  AudioFileReader.h  FFmpegGlue.cpp  FFmpegGlue.h  audio_file_reader.cpp  ffmpeg_glue.cpp  ffmpeg_glue.h  in_memory_url_protocol.cc  in_memory_url_protocol.h
res/: address_book.proto
scripts/: git_sync_deps.py
tests/: AudioBusUnitTest.cpp  audio_file_reader_unittest.cc  in_memory_url_protocol_unittest.cc  vector_unittest.cc
